<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/rewardDetailedFragment"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#DCEDC8"
              android:orientation="vertical"
              android:weightSum="1"
              tools:context="pes.gogreenapp.Fragments.RewardDetailedFragment"
...
            android:clickable="true"
            android:src="@mipmap/favorite"
            android:tag="favorite"
            android:tint="@color/colorWhite"/>

        <ImageButton
            android:id="@+id/actionDetailReward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/favoriteDetailButton"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/circular_button"
...
