<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:background="@mipmap/ndheader_4"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:clickable="true"
        android:contentDescription="@string/profile_image_description"
        android:src="@android:drawable/sym_def_app_icon"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingPrefix">

        <TextView
            android:id="@+id/header_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".90"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#757575"
            android:textSize="20sp"
            fontPath="fonts/Raleway-Light.ttf"/>

        <ImageView
            android:id="@+id/arrow_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".10"
            android:contentDescription="@string/arrow_switch_down"
            android:src="@drawable/ic_arrow_drop_down_black_24dp"/>
    </LinearLayout>


</LinearLayout>